improved/fixed layout issues for course groups on resizing. improved layout for courses-by-year links on CoursesList page. Frontend seems to be free of glaring issues (only needs styling improvements?)

--- a/client/src/styles/CourseGroup.css
+++ b/client/src/styles/CourseGroup.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 10px;
+    column-gap: 10px;
     justify-items: center;
 }
 
