--- a/client/src/styles/CoursesByYear.css
+++ b/client/src/styles/CoursesByYear.css
@@ -3,10 +3,15 @@
     min-height: 90vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #byYearHeader {
     text-align: center;
+}
+
+#yearCoursesList > .coursePreviewContainer {
+    margin-bottom: 10px;
 }
 
 
@@ -18,6 +23,7 @@
         grid-template-columns: 1fr 4.5fr;
         grid-template-rows: .5fr 2fr;
         column-gap: 10%;
+        align-items: baseline;
     }
 
     #yearCoursesList {
